--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="images/hacker.png" type="image/png" />
 </head>
+
 <body class="bg-dark text-light">
 
   <!-- Navbar -->
@@ -44,11 +45,34 @@
   <main class="container py-5">
 
     <!-- Sobre mí -->
-    <section id="sobre-mi" class="mb-5">
-      <h2>Sobre mí</h2>
-      <p>Aquí puedes contar quién eres, tu experiencia, etc.</p>
-    </section>
-
+      <h1 class="text-center mb-4">Portafolio de Álvaro García Martín</h1>
+      <p class="text-center">Desarrollador web especializado en frontend.</p>
+      <div class="section-container">
+        <section class="section">
+          
+          <section id="sobre-mi" class="mb-5">
+            <h2 id="sobreMiTitulo">Sobre mí</h2>
+            <div class="content"></div>
+            <div id="sobreMiCuerpo">
+              <p >Me gustaría contaros un poco sobre mi:
+                <br>Me llamo Álvaro García Martín, tengo 34 años y actualmente vivo en Almeria.
+                <br>desde pequeño el mundo de la informática siempre me ha apasionado, el "cacharrear" con los ordenadores, el comprender como funcionan y como interactuan entre si. En 2018 terminé mis estudios de SMR (Grado Medio en Sistemas Microinformáticos y Redes) y aquí comenzó mi gran viaje por este mundo de la tecnología  
+                <br>En 2020 comencé a encontrarle el encanto al desarrollo web, maquetando formularios para ayuntamientos, hacerlos responsive, dandoles estilos y un toque personal comencé a darme cuenta de que una de las cosas que más me llamaba la atención era el desarrollo web, además de mi otra gran pasión en la informatica que son las bases de datos.
+                <br>En 2024 comencé mi formación en desarrollo web realizando el Grado Superior en Desarrollo de Aplicaciones Web, donde he desarrollado más mi pasión por el desarrollo frontend y las bases de datos.
+                <br>Como resumen de mi trayectoria se podría decir que me gustan tanto los sistemas, bases de datos, ingeniería de negocio y el desarrollo web, pero lo que más me gusta en general es aprender y seguir formándome en este mundo que nunca para de evolucionar.
+                <br>En este portafolio podrás ver algunos de los proyectos que he realizado, tanto en el ámbito del desarrollo web como en el de bases de datos, y espero que te sirva para conocerme un poco más.
+                <br>También encontraras detallada toda mi experiencia a lo largo de los años como profesional en el mundo de la informática, desde mis inicios hasta la actualidad.
+                <br>Si quieres saber más sobre mí, puedes visitar mi perfil de LinkedIn o GitHub, donde encontrarás más información sobre mis proyectos y habilidades.
+                <br>En LinkedIn: <a href="https://www.linkedin.com/in/alvaro-garcia-martin-99492116b/" target="_blank">Perfil de LinkedIn</a>
+                <br>En GitHub: <a href="https://github.com/AlvaroGarciaMartin/" target="_blank">Perfil de GitHub</a>
+                <br>Si quieres ponerte en contacto conmigo, puedes hacerlo a través del formulario de contacto que encontrarás más abajo.
+                <br>¡Gracias por visitar mi portafolio!
+              </p>
+            </div>
+          </section>
+        </section>
+          </div>
+      </div>
     <!-- Proyectos -->
     <section id="proyectos" class="mb-5">
       <h2>Proyectos</h2>
