--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
   <title>Porfolio de Álvaro García Martín</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+  <!--<script src="script.js"></script>-->
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="images/hacker.png" type="image/png" />
 </head>
 
 <body class="bg-dark text-light">
-
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Álvaro García Martín</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -47,14 +46,19 @@
 
     <!-- Sobre mí -->
     <h1 class="text-center mb-4">Portafolio de Álvaro García Martín</h1>
+    <div style="display: flex; justify-content: center; padding-bottom: 2%;">
+      <img src="images/mv/foto7.jpg" alt="Álvaro García Martín"
+        style="max-width: 200px; border-radius: 30%; display: block;">
+    </div>
     <p class="text-center">Desarrollador web especializado en frontend.</p>
     <div class="section-container">
       <section class="section">
 
-        <section id="sobre-mi" class="mb-5">
-          <h2 id="sobreMiTitulo">Sobre mí</h2>
-          <div class="content"></div>
-          <div id="sobreMiCuerpo">
+        <section id="sobre-mi">
+          <div data-bs-toggle="collapse" href="#sobre-mi-cuerpo" role="button" aria-expanded="false">
+            <h2 id="sobre-mi-titulo">Sobre mí</h2>
+          </div>
+          <div id="sobre-mi-cuerpo" class="collapse">
             <div class="row align-items-center">
               <!-- Columna de texto -->
               <div class="col-md-8">
@@ -106,20 +110,120 @@
         </section>
       </section>
     </div>
-    </div>
-    <!-- Proyectos -->
-       <div class="section-container">
+
+    <!-- Experiencia laboral -->
+    <div class="section-container">
       <section class="section">
-    <section id="proyectos" class="mb-5">
-      <h2 id="proyectosTitulo">Proyectos</h2>
-      <p>Muestra algunos de tus trabajos o proyectos destacados.</p>
-    </section>
+        <section id="proyectos">
+          <div data-bs-toggle="collapse" href="#experiencia-cuerpo" role="button" aria-expanded="false">
+            <h2 id="experiencia-titulo">Experiencia Laboral</h2>
+          </div>
+          <div id="experiencia-cuerpo" class="collapse">
+            <div id="experiencia-cuerpo">
+              <!-- Botones de empresas -->
+              <div class="row align-items-center">
+                <!-- Botón Add4u-->
+                <!-- Modal bootstrap - sin custom JS-->
+                <button class="icono-empresa col-md-6" data-bs-toggle="modal" data-bs-target="#modal-add4u">
+                  <img src="images/IconsEmpresas/add4uicon2.png" alt="Logo Add4u" class="img-fluid bg-black"
+                    style="max-width: 100%;">
+                </button>
+
+                <div class="modal fade" id="modal-add4u" tabindex="-1" aria-hidden="true">
+                  <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                      <div class="d-flex justify-content-end pt-2 pe-2">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-header justify-content-center">
+                        <img src="images/IconsEmpresas/add4uicon2.png" alt="Logo de Add4u" class="img-fluid mb-3" />
+                      </div>
+                      <div class="modal-body">
+                        <p id="popupDesc">Add4u es una empresa especializada en soluciones tecnológicas avanzadas
+                          orientadas a
+                          la transformación digital de negocios.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div> <!-- Modal bootstrap - sin custom JS-->
+
+                <!-- Botón PGO-->
+                <!-- Modal bootstrap - sin custom JS-->
+                <button class="icono-empresa col-md-6" data-bs-toggle="modal" data-bs-target="#modal-PGO">
+                  <img src="images/IconsEmpresas/PGO2.jpg" alt="Logo PGO UCAM" class="img-fluid bg-black"
+                    style="max-width: 100%;">
+                </button>
+
+                <div class="modal fade" id="modal-PGO" tabindex="-1" aria-hidden="true">
+                  <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                      <div class="d-flex justify-content-end pt-2 pe-2">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-header justify-content-center">
+                        <img src="images/IconsEmpresas/PGO3.png" alt="Logo de PGO UCAM" class="img-fluid mb-3" />
+                      </div>
+                      <div class="modal-body">
+                        <p id="popupDesc">pgo es una empresa especializada en soluciones tecnológicas avanzadas
+                          orientadas a
+                          la transformación digital de negocios.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div> <!-- Modal bootstrap - sin custom JS-->
+                <!-- Botón keycoes-->
+                <!-- Modal bootstrap - sin custom JS-->
+                <button class="icono-empresa col-md-6" data-bs-toggle="modal" data-bs-target="#modal-keycoes">
+                  <img src="images/IconsEmpresas/keycoes1.png" alt="Logo keycoes" class="img-fluid bg-black"
+                    style="max-width: 100%;">
+                </button>
+
+                <div class="modal fade" id="modal-keycoes" tabindex="-1" aria-hidden="true">
+                  <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                      <div class="d-flex justify-content-end pt-2 pe-2">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-header justify-content-center">
+                        <img src="images/IconsEmpresas/keycoes1.png" alt="Logo de keycoes" class="img-fluid mb-3" />
+                      </div>
+                      <div class="modal-body">
+                        <p id="popupDesc">keycoes es una empresa especializada en soluciones tecnológicas avanzadas
+                          orientadas a
+                          la transformación digital de negocios.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div> <!-- Modal bootstrap - sin custom JS-->
+                
+                <!-- Columna de texto derecha -->
+                <div class="col-md-6">
+                  <!--- proximamente  -->
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </section>
-      </div>
+    </div>
+
+    <!-- Proyectos -->
+    <div class="section-container">
+      <section class="section">
+        <section id="proyectos">
+          <div data-bs-toggle="collapse" href="#proyectos-cuerpo" role="button" aria-expanded="false">
+            <h2 id="proyectos-titulo">Proyectos</h2>
+          </div>
+          <div id="proyectos-cuerpo" class="collapse">
+            <p>Muestra algunos de tus trabajos o proyectos destacados.</p>
+          </div>
+        </section>
+      </section>
+    </div>
 
     <!-- Contacto -->
     <section id="contacto" class="mb-5">
-      <h2 id="contactoTitulo">Contacto</h2>
+      <h2 id="contacto-titulo">Contacto</h2>
       <form class="row g-3">
         <div class="col-md-6">
           <label for="nombre" class="form-label">Nombre</label>
@@ -140,10 +244,20 @@
     </section>
 
   </main>
+
+<canvas id="demo-canvas"></canvas>
+  <!-- Footer -->
+  <footer class="bg-dark text-center text-white py-3">
+    <p class="mb-0">&copy; 2025 Álvaro García. Todos los derechos reservados.</p>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.min.js"
+    integrity="sha384-7qAoOXltbVP82dhxHAUje59V5r2YsVfBafyUDxEdApLPmcdhBPg1DKg1ERo0BZlK"
+    crossorigin="anonymous"></script>
+  <script src="cursor-effect.js"></script>
+ 
 </body>
-<!-- Footer -->
-<footer class="bg-primary text-center text-white py-3">
-  <p class="mb-0">&copy; 2025 Álvaro García. Todos los derechos reservados.</p>
-</footer>
 
 </html>
