cambios en botones

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <section class="section">
         <section id="proyectos">
           <div data-bs-toggle="collapse" href="#experiencia-cuerpo" role="button" aria-expanded="false">
-            <h2 id="experiencia-titulo">Experiencia Laboral</h2>
+            <h2 style="padding-bottom: 2%;" id="experiencia-titulo">Experiencia Laboral</h2>
           </div>
           <div id="experiencia-cuerpo" class="collapse">
             <div id="experiencia-cuerpo">
@@ -125,7 +125,7 @@
                 <!-- Botón Add4u-->
                 <!-- Modal bootstrap - sin custom JS-->
                 <button class="icono-empresa col-md-6" data-bs-toggle="modal" data-bs-target="#modal-add4u">
-                  <img src="images/IconsEmpresas/add4uicon2.png" alt="Logo Add4u" class="img-fluid bg-black"
+                  <img src="images/IconsEmpresas/add4uicon3.png" alt="Logo Add4u" class="img-fluid bg-black"
                     style="max-width: 100%;">
                 </button>
 
@@ -136,12 +136,56 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                       </div>
                       <div class="modal-header justify-content-center">
-                        <img src="images/IconsEmpresas/add4uicon2.png" alt="Logo de Add4u" class="img-fluid mb-3" />
+                        <img src="images/IconsEmpresas/add4uicon3.png" alt="Logo de Add4u" class="img-fluid mb-3" />
                       </div>
                       <div class="modal-body">
-                        <p id="popupDesc">Add4u es una empresa especializada en soluciones tecnológicas avanzadas
-                          orientadas a
-                          la transformación digital de negocios.</p>
+                        <h3 style="text-align: center;">Carta de Recomendación</h3>
+                        <iframe src="doc/CartaAdd4u.pdf" width="100%" height="600px"></iframe>
+                        <p style="text-align: justify;" id="popupDesc"><strong>Add4u</strong> es una empresa especializada en soluciones tecnológicas avanzadas
+                          orientadas a la transformación digital de entidades públicas.
+                          <br>En ella he desarrollado mis habilidades con mayor potencial, realizando tareas de
+                          desarrollo de formularios web, administración de bases de datos y gestión de proyectos.
+                          <br>He realizado tareas de automatización de procesos en entornos de gestión documental,
+                          asistencia a usuarios y resolución de incidencias, reuniones tecnicas, y he sido parte de
+                          colaboración en las decisiones de configuración de automatización de los entornos cliente.
+                          <br>He trabajado con tecnologías como HTML, CSS, JavaScript, PHP, SQL SERVER y herramientas de
+                          gestión documental y de proyectos, herramientas ticketing y herramientas Microsoft Office.
+                          <br>
+                          <br>En Add4u he aprendido a trabajar en equipo, a gestionar proyectos y a resolver problemas
+                          de manera eficiente, lo que me ha permitido crecer profesionalmente y adquirir una gran
+                          experiencia en el ámbito del desarrollo web, la gestión de bases de datos, la automatización
+                          de procesos y la resolución de incidencias.
+                          <br>Entre las enntidades con las que he trabajado se encuentran:
+                        <ul>
+                          <li><a href="https://sedeelectronica.ayto-cabrerizos.com/eAdmin/Sede.do" target="_blank" rel="noopener noreferrer">Ayuntamiento de Cabrerizos</a>
+                            <ul>
+                              <li>Carta de Recomendación</li>
+                            </ul>
+                          </li>
+                          <li><a href="https://sede.navalcarnero.es/eAdmin/Sede.do" target="_blank" rel="noopener noreferrer">Ayuntamiento de Navalcarnero</a>
+                            <ul>
+                              <li>Carta de Recomendación</li>
+                            </ul>
+                          </li>
+                          </li>
+                          <li><a href="https://elescorial.sedelectronica.es/info.0" target="_blank" rel="noopener noreferrer">Ayuntamiento de El Escorial</a></li>
+                          <li><a href="https://sede.aytosanlorenzo.es/eAdmin/Sede.do" target="_blank" rel="noopener noreferrer">Ayuntamiento de San Lorenzo</a></li>
+                          <li><a href="https://robledodechavela.es/" target="_blank" rel="noopener noreferrer">Ayuntamiento de Robledo de Chavela</a></li>
+                          <li><a href="https://sede.torrelodones.es/info.0" target="_blank" rel="noopener noreferrer">Ayuntamiento de Torrelodones</a></li>
+                          <li><a href="https://sede.ayto-meco.es/eAdmin/Sede.do" target="_blank" rel="noopener noreferrer">Ayuntamiento de Meco</a></li>
+                          <li><a href="https://sede.trescantos.es/eAdmin/Sede.do" target="_blank" rel="noopener noreferrer">Ayuntamiento de Tres Cantos</a></li>
+                          <li><a href="https://carpeta.onil.es/eAdmin/Sede.do" target="_blank" rel="noopener noreferrer">Ayuntamiento de Onil</a></li>
+                          <li><a href="https://www.castalla.org/el-ayuntamiento/sede-electronica/" target="_blank" rel="noopener noreferrer">Ayuntamiento de Castalla</a></li>
+                          <li><a href="https://sede.ayuntamientofuentelsaz.com/eAdmin/Sede.do" target="_blank" rel="noopener noreferrer">Ayuntamiento de Fuente el Saz del Jarama</a></li>
+                          <li><a href="https://www.mancomunidad-tham.es/" target="_blank" rel="noopener noreferrer">Servicios sociales THAM</a></li>
+                          <li><a href="https://www.alpedrete.es/" target="_blank" rel="noopener noreferrer">Ayuntamiento de Alpedrete</a></li>
+                          <li><a href="https://www.moralzarzal.es/" target="_blank" rel="noopener noreferrer">Ayuntamiento de Moralzarzal</a></li>
+                          <li><a href="https://sede.ayuntamiento-losmolinos.es/eAdmin/Sede.do" target="_blank" rel="noopener noreferrer">Ayuntamiento de Los Molinos</a></li>
+                          <li><a href="https://serranillosdelvalle.es/" target="_blank" rel="noopener noreferrer">Ayuntamiento de Serranillos del Valle</a></li>
+                          <li><a href="https://www.fuensalida.com/" target="_blank" rel="noopener noreferrer">Ayuntamiento de Fuensalida</a></li>
+                        </ul>
+                        </p>
+                        </p>
                       </div>
                     </div>
                   </div>
@@ -195,7 +239,7 @@
                     </div>
                   </div>
                 </div> <!-- Modal bootstrap - sin custom JS-->
-                
+
                 <!-- Columna de texto derecha -->
                 <div class="col-md-6">
                   <!--- proximamente  -->
@@ -245,7 +289,7 @@
 
   </main>
 
-<canvas id="demo-canvas"></canvas>
+  <canvas id="demo-canvas"></canvas>
   <!-- Footer -->
   <footer class="bg-dark text-center text-white py-3">
     <p class="mb-0">&copy; 2025 Álvaro García. Todos los derechos reservados.</p>
@@ -257,7 +301,7 @@
     integrity="sha384-7qAoOXltbVP82dhxHAUje59V5r2YsVfBafyUDxEdApLPmcdhBPg1DKg1ERo0BZlK"
     crossorigin="anonymous"></script>
   <script src="cursor-effect.js"></script>
- 
+
 </body>
 
 </html>
