--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Portafolio de desarrollador web especializado en frontend." />
   <meta name="keywords" content="portafolio, desarrollador, web, frontend, HTML, CSS" />
   <meta name="author" content="Álvaro García Martín" />
-  <meta http-equiv="refresh" content="30" />
+  <!--<meta http-equiv="refresh" content="30" />-->
   <meta name="theme-color" content="#4CAF50" />
   <title>Porfolio de Álvaro García Martín</title>
 
@@ -29,6 +29,9 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="#sobre-mi">Sobre mí</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#experiencia">Experiencia</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#proyectos">Proyectos</a>
@@ -114,7 +117,7 @@
     <!-- Experiencia laboral -->
     <div class="section-container">
       <section class="section">
-        <section id="proyectos">
+        <section id="experiencia">
           <div data-bs-toggle="collapse" href="#experiencia-cuerpo" role="button" aria-expanded="false">
             <h2 style="padding-bottom: 2%;" id="experiencia-titulo">Experiencia Laboral</h2>
           </div>
