--- a/index.html
+++ b/index.html
@@ -144,7 +144,17 @@
                       <div class="modal-body">
                         <h3 style="text-align: center;">Carta de Recomendación</h3>
                         <iframe src="doc/CartaAdd4u.pdf" width="100%" height="600px"></iframe>
-                        <p style="text-align: justify;" id="popupDesc"><strong>Add4u</strong> es una empresa especializada en soluciones tecnológicas avanzadas
+                        <p style="text-align: justify;" id="popupDesc"><strong>Desde:</strong><i> agosto de 2019</i>
+                          <br><strong>hasta:</strong><i> febrero de 2024</i>
+                          <br><strong>Tiempo total:</strong><i> 4 años y 6 meses</i>
+                          <br><strong>Tipo de contrato:</strong><i> Indefinido</i>
+                          <br><strong>Modalidad:</strong><i> Presencial de 2019 a 2021, remota de 2021 a 2024</i>
+                          <br><strong>Puesto/os:</strong><i> Tecnico de soporte y director del departamento de
+                            soporte</i>
+                          <br><strong>Ubicación:</strong><i> Madrid, España</i>
+                        </p>
+                        <p style="text-align: justify;" id="popupDesc"><strong>Add4u</strong> es una empresa
+                          especializada en soluciones tecnológicas avanzadas
                           orientadas a la transformación digital de entidades públicas.
                           <br>En ella he desarrollado mis habilidades con mayor potencial, realizando tareas de
                           desarrollo de formularios web, administración de bases de datos y gestión de proyectos.
@@ -160,32 +170,49 @@
                           de procesos y la resolución de incidencias.
                           <br>Entre las enntidades con las que he trabajado se encuentran:
                         <ul>
-                          <li><a href="https://sedeelectronica.ayto-cabrerizos.com/eAdmin/Sede.do" target="_blank" rel="noopener noreferrer">Ayuntamiento de Cabrerizos</a>
-                            <ul>
+                          <li><a href="https://sedeelectronica.ayto-cabrerizos.com/eAdmin/Sede.do" target="_blank"
+                              rel="noopener noreferrer">Ayuntamiento de Cabrerizos</a>
+                           <!--<ul>
                               <li>Carta de Recomendación</li>
-                            </ul>
+                            </ul>-->
                           </li>
-                          <li><a href="https://sede.navalcarnero.es/eAdmin/Sede.do" target="_blank" rel="noopener noreferrer">Ayuntamiento de Navalcarnero</a>
-                            <ul>
+                          <li><a href="https://sede.navalcarnero.es/eAdmin/Sede.do" target="_blank"
+                              rel="noopener noreferrer">Ayuntamiento de Navalcarnero</a>
+                            <!--<ul>
                               <li>Carta de Recomendación</li>
-                            </ul>
+                            </ul>-->
                           </li>
                           </li>
-                          <li><a href="https://elescorial.sedelectronica.es/info.0" target="_blank" rel="noopener noreferrer">Ayuntamiento de El Escorial</a></li>
-                          <li><a href="https://sede.aytosanlorenzo.es/eAdmin/Sede.do" target="_blank" rel="noopener noreferrer">Ayuntamiento de San Lorenzo</a></li>
-                          <li><a href="https://robledodechavela.es/" target="_blank" rel="noopener noreferrer">Ayuntamiento de Robledo de Chavela</a></li>
-                          <li><a href="https://sede.torrelodones.es/info.0" target="_blank" rel="noopener noreferrer">Ayuntamiento de Torrelodones</a></li>
-                          <li><a href="https://sede.ayto-meco.es/eAdmin/Sede.do" target="_blank" rel="noopener noreferrer">Ayuntamiento de Meco</a></li>
-                          <li><a href="https://sede.trescantos.es/eAdmin/Sede.do" target="_blank" rel="noopener noreferrer">Ayuntamiento de Tres Cantos</a></li>
-                          <li><a href="https://carpeta.onil.es/eAdmin/Sede.do" target="_blank" rel="noopener noreferrer">Ayuntamiento de Onil</a></li>
-                          <li><a href="https://www.castalla.org/el-ayuntamiento/sede-electronica/" target="_blank" rel="noopener noreferrer">Ayuntamiento de Castalla</a></li>
-                          <li><a href="https://sede.ayuntamientofuentelsaz.com/eAdmin/Sede.do" target="_blank" rel="noopener noreferrer">Ayuntamiento de Fuente el Saz del Jarama</a></li>
-                          <li><a href="https://www.mancomunidad-tham.es/" target="_blank" rel="noopener noreferrer">Servicios sociales THAM</a></li>
-                          <li><a href="https://www.alpedrete.es/" target="_blank" rel="noopener noreferrer">Ayuntamiento de Alpedrete</a></li>
-                          <li><a href="https://www.moralzarzal.es/" target="_blank" rel="noopener noreferrer">Ayuntamiento de Moralzarzal</a></li>
-                          <li><a href="https://sede.ayuntamiento-losmolinos.es/eAdmin/Sede.do" target="_blank" rel="noopener noreferrer">Ayuntamiento de Los Molinos</a></li>
-                          <li><a href="https://serranillosdelvalle.es/" target="_blank" rel="noopener noreferrer">Ayuntamiento de Serranillos del Valle</a></li>
-                          <li><a href="https://www.fuensalida.com/" target="_blank" rel="noopener noreferrer">Ayuntamiento de Fuensalida</a></li>
+                          <li><a href="https://elescorial.sedelectronica.es/info.0" target="_blank"
+                              rel="noopener noreferrer">Ayuntamiento de El Escorial</a></li>
+                          <li><a href="https://sede.aytosanlorenzo.es/eAdmin/Sede.do" target="_blank"
+                              rel="noopener noreferrer">Ayuntamiento de San Lorenzo</a></li>
+                          <li><a href="https://robledodechavela.es/" target="_blank"
+                              rel="noopener noreferrer">Ayuntamiento de Robledo de Chavela</a></li>
+                          <li><a href="https://sede.torrelodones.es/info.0" target="_blank"
+                              rel="noopener noreferrer">Ayuntamiento de Torrelodones</a></li>
+                          <li><a href="https://sede.ayto-meco.es/eAdmin/Sede.do" target="_blank"
+                              rel="noopener noreferrer">Ayuntamiento de Meco</a></li>
+                          <li><a href="https://sede.trescantos.es/eAdmin/Sede.do" target="_blank"
+                              rel="noopener noreferrer">Ayuntamiento de Tres Cantos</a></li>
+                          <li><a href="https://carpeta.onil.es/eAdmin/Sede.do" target="_blank"
+                              rel="noopener noreferrer">Ayuntamiento de Onil</a></li>
+                          <li><a href="https://www.castalla.org/el-ayuntamiento/sede-electronica/" target="_blank"
+                              rel="noopener noreferrer">Ayuntamiento de Castalla</a></li>
+                          <li><a href="https://sede.ayuntamientofuentelsaz.com/eAdmin/Sede.do" target="_blank"
+                              rel="noopener noreferrer">Ayuntamiento de Fuente el Saz del Jarama</a></li>
+                          <li><a href="https://www.mancomunidad-tham.es/" target="_blank"
+                              rel="noopener noreferrer">Servicios sociales THAM</a></li>
+                          <li><a href="https://www.alpedrete.es/" target="_blank" rel="noopener noreferrer">Ayuntamiento
+                              de Alpedrete</a></li>
+                          <li><a href="https://www.moralzarzal.es/" target="_blank"
+                              rel="noopener noreferrer">Ayuntamiento de Moralzarzal</a></li>
+                          <li><a href="https://sede.ayuntamiento-losmolinos.es/eAdmin/Sede.do" target="_blank"
+                              rel="noopener noreferrer">Ayuntamiento de Los Molinos</a></li>
+                          <li><a href="https://serranillosdelvalle.es/" target="_blank"
+                              rel="noopener noreferrer">Ayuntamiento de Serranillos del Valle</a></li>
+                          <li><a href="https://www.fuensalida.com/" target="_blank"
+                              rel="noopener noreferrer">Ayuntamiento de Fuensalida</a></li>
                         </ul>
                         </p>
                         </p>
@@ -211,9 +238,26 @@
                         <img src="images/IconsEmpresas/PGO3.png" alt="Logo de PGO UCAM" class="img-fluid mb-3" />
                       </div>
                       <div class="modal-body">
-                        <p id="popupDesc">pgo es una empresa especializada en soluciones tecnológicas avanzadas
-                          orientadas a
-                          la transformación digital de negocios.</p>
+                         <p style="text-align: justify;" id="popupDesc"><strong>Desde:</strong><i> Abril de 2025</i>
+                          <br><strong>hasta:</strong><i> Actualidad</i>
+                          <br><strong>Tiempo total:</strong><i> continuo trabajando en esta empresa</i>
+                          <br><strong>Tipo de contrato:</strong><i> Indefinido</i>
+                          <br><strong>Modalidad:</strong><i> Presencial</i>
+                          <br><strong>Puesto/os:</strong><i> Administrador de Sistemas</i>
+                          <br><strong>Ubicación:</strong><i> Almeria, España</i>
+                        </p>
+                        <p style="text-align: justify;" id="popupDesc"> <strong>PGO</strong> es una consultora dedicada a la formación especializada en odontologia.
+                          <br>Desde mi comienzo, mi papel ha sido fundamentalmente administrador de sistemas, gestionando servidores, maquinas virtuales y bases de datos.
+                          <br>
+                          <br>En esta empresa estoy desarrollando aptitudes de analisis de necesidades, gestion de proyectos, resolución de incidencias, coordinación de equipos y gestión de recursos.
+                          <br>He trabajado con tecnologías como Windows Server, SQL Server, PostGreSQL, MySql, herramientas de virtualización (hyperV, VMware y VirtualBox), Azure, Office365.
+                          <br>
+                          <br>he realizado grandes proyectos como la integración, configuración y personalización de un sistema de ticketing (osticket), implementación de firewall Sophos, 
+                          <br>Creciación de un nuevo entorno de directorio activo, reestructuración de la red local y transformación de red cableada a wifi.
+                          <br>
+                          <br>En PGO he aprendido a gestionar sistemas complejos, a trabajar en equipo y a resolver problemas de manera eficiente, lo que me ha permitido crecer profesionalmente y adquirir una gran experiencia en el ámbito de la administración de sistemas.
+                          <br>Gracias al estado de los sistemas, la infraestructura, la red y la organización de la empresa, me he visto en la necesidad de adquirir habilidades de liderazgo de proyectos y coordinación de equipos entre departamentos y los distintos proveedores de servicios.
+                        </p>
                       </div>
                     </div>
                   </div>
@@ -235,9 +279,23 @@
                         <img src="images/IconsEmpresas/keycoes1.png" alt="Logo de keycoes" class="img-fluid mb-3" />
                       </div>
                       <div class="modal-body">
-                        <p id="popupDesc">keycoes es una empresa especializada en soluciones tecnológicas avanzadas
-                          orientadas a
-                          la transformación digital de negocios.</p>
+                        <p style="text-align: justify;" id="popupDesc"><strong>Desde:</strong><i> febrero de 2024</i>
+                          <br><strong>hasta:</strong><i> agosto de 2024</i>
+                          <br><strong>Tiempo total:</strong><i> 7 meses</i>
+                          <br><strong>Tipo de contrato:</strong><i> temporal renovable</i>
+                          <br><strong>Modalidad:</strong><i> Presencial</i>
+                          <br><strong>Puesto/os:</strong><i> Tecnico de soporte</i>
+                          <br><strong>Ubicación:</strong><i> Almeria, España</i>
+                        </p>
+                        <p style="text-align: justify;" id="popupDesc"><strong>keycoes</strong> es una consultora encargada de dar servicio a
+                          entidades bancarias, en mi caso trabajé dando soporte a Cajamar.
+                          <br>
+                          <br>Como tareas principales comencé dando asistencia a usuarios de todas las entidades situadas en españa.
+                          <br>Tras dos meses me incorporaron al proyecto de renovación tecnologica de Cajamar, donde realizaba automatizaciones, configuraciones y testing de equipos informaticos asegurando suu correcto funcionamiento.
+                          <br>
+                          <br>He trabajado con sistemas bancarios, tabletas Wacom, Microsoft Office, Windows 10 y 11, y herramientas de ticketing (Remedy).
+                          <br>En keycoes he aprendido a trabajar en un entorno de alta presión, a resolver problemas de manera rápida y eficiente, y a colaborar con un equipo multidisciplinario para lograr los objetivos del proyecto consiguiendo medias mensuales de resolución de incidencias de <strong>450 por mes</strong>.
+                        </p>
                       </div>
                     </div>
                   </div>
@@ -295,7 +353,7 @@
   <canvas id="demo-canvas"></canvas>
   <!-- Footer -->
   <footer class="bg-dark text-center text-white py-3">
-    <p class="mb-0">&copy; 2025 Álvaro García. Todos los derechos reservados.</p>
+    <p class="mb-0">&copy; 2025 Álvaro García Martín. Todos los derechos reservados.</p>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
